--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 
   <body>
     <div class="o-wrapper js-wrapper">
+      <h1 id="title">Movie Sales</h1>
+      <div id="description">
+        Top 100 Highest Grossing Movies Grouped By Genre
+      </div>
       <div class="c-d3 js-d3"></div>
     </div>
 
